[package]
name = "audio-sample-mixer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hound = "3.2"
num = "0.4"
csv = "1.1.6"
symphonia = { version = "0.5.3", features = ["all"] }
vorbis-encoder = "0.1.4"
samplerate = "0.2.4"